# zed

./: Cargo.toml  PLANNING_IMPLEMENTATION_STATUS.md  PLANNING_INTEGRATION_GUIDE.md  PLANNING_NEXT_STEPS.md  PLANNING_QUICK_REFERENCE.md
assets/keymaps/: default-linux.json  default-macos.json
crates/agent/src/: thread.rs  tools.rs
crates/agent_ui/src/: agent_panel.rs  agent_ui.rs  buffer_codegen.rs  inline_assistant.rs
crates/planning/: Cargo.toml
crates/planning/src/: lib.rs  markdown.rs  plan.rs  state.rs  task.rs  templates.rs  validation.rs
crates/planning_panel/: Cargo.toml  LICENSE-GPL
crates/planning_panel/src/: actions.rs  lib.rs  planning_panel.rs  planning_panel_tests.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
