[package]
name = "planning_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
log.workspace = true
futures.workspace = true

# Zed dependencies
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
db.workspace = true
settings.workspace = true
language_model.workspace = true
editor.workspace = true

# Internal dependencies
planning.workspace = true
schemars.workspace = true
agent_ui.workspace = true
agent_settings.workspace = true
agent.workspace = true
project.workspace = true
prompt_store.workspace = true
fs.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
editor = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
theme.workspace = true
